--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/b9c138fb21.js" crossorigin="anonymous"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./assets/images/favicon-16x16.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css" integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
@@ -17,10 +18,10 @@
         <nav>
             <h1 id="logo">cp</h1>
             <ul id="nav-links"> 
-                <li><a class="link-item" href="#about-me">about</a></li>
-                <li><a class="link-item" href="#my-portfolio">portfolio</a></li>
-                <li><a class="link-item" href="https://www.github.com/cpaschall">github</a></li>
-                <li><a class="link-item" href="#contact-me">contact</a></li>
+                <li><a class="link-item" href="#about-me"><i class="fa-solid fa-address-card" style="color:#00D1CD"></i></a></li>
+                <li><a class="link-item" href="https://www.linkedin.com/in/calvin-paschall/"><i class="fa-brands fa-linkedin" style="color:#00D1CD"></i></a></li>
+                <li><a class="link-item" href="https://www.github.com/cpaschall"><i class="fa-brands fa-github" style="color:#00D1CD"></i></a></li>
+                <li><a class="link-item" href="#contact-me"><i class="fa-solid fa-envelope" style="color:#00D1CD"></i></a></li>
             </ul>
         </nav>
     </header>
@@ -59,18 +60,18 @@
                   <h3 id="sect-port">portfolio</h3>
                 </div>   
             </div>
-            <button type="submit" class="cycle-btn" id="previous"><</button>
+            <button type="submit" class="cycle-btn" id="previous">&#171</button>
             <div id="portfolio">  
 
             </div>
-            <button type="submit" class="cycle-btn" id="next">></button>
+            <button type="submit" class="cycle-btn" id="next">&#187</button>
         </div>
         <div class="" id="contact-me">
           <div id="title-container-contact">
             <h3 class="sect-title">contact me</h3>
           </div>
           <div id="contact-cont">
-            <form action="" id="contact-form">
+            <form action="" id="contact-form">  
               <p>
                   <label for="full-name">name:</label>
                   <input type="text" class="text-input" id="full-name" placeholder="first last">
