adding to css and js files

--- a/index.html
+++ b/index.html
@@ -61,10 +61,50 @@
                 </div>   
             </div>
             <button type="submit" class="cycle-btn" id="previous">&#171</button>
-            <div id="portfolio">  
-
+            <div id="portfolio">
+              <!-- <div class='code-quiz mobile' id='proj-0'>
+                <a class='proj-link' href='https://cpaschall.github.io/code-quiz/' alt='code quiz gif'><span id='rotate-0'>code quiz</span></a>
+              </div>
+              <div class='weather-dash mobile' id='proj-1'>
+                <a class='proj-link' href='https://cpaschall.github.io/weather-dashboard/' alt='weather dashboard gif'><span id='rotate-1'>weather dashboard</span></a>
+              </div>
+              <div class='stocks mobile' id='proj-2'>
+                <a class='proj-link' href='https://anthonydiblasio.github.io/stock-weather/' alt='stock-weather gif'><span id='rotate-2'>stock-weather</span></a>
+              </div>
+              <div class='scheduler mobile' id='proj-3'>
+                <a class='proj-link' href='https://cpaschall.github.io/workday-scheduler/' alt='scheduler gif'><span id='rotate-3'>scheduler</span></a>
+              </div>
+              <div class='pw-gen mobile' id='proj-4'>
+                <a class='proj-link' href='https://cpaschall.github.io/password-generator/' alt='pw gen png'><span id='rotate-0'>password generator</span></a>
+              </div> -->
             </div>
             <button type="submit" class="cycle-btn" id="next">&#187</button>
+        </div>
+        <div class="" id="port-mobile">
+          <div id="title-container-port">
+              <div id="port-container-inner">
+                <h3 id="sect-port">portfolio</h3>
+              </div>   
+          </div>
+          <!-- <button type="submit" class="cycle-btn" id="previous">&#171</button> -->
+          <div id="portfolio">  
+            <div class='code-quiz mobile'>
+              <a class='proj-link' href='https://cpaschall.github.io/code-quiz/' alt='code quiz gif'><span id='rotate-0'>code quiz</span></a>
+            </div>
+            <div class='weather-dash mobile'>
+              <a class='proj-link' href='https://cpaschall.github.io/weather-dashboard/' alt='weather dashboard gif'><span id='rotate-1'>weather dashboard</span></a>
+            </div>
+            <div class='stocks mobile'>
+              <a class='proj-link' href='https://anthonydiblasio.github.io/stock-weather/' alt='stock-weather gif'><span id='rotate-2'>stock-weather</span></a>
+            </div>
+            <div class='scheduler mobile'>
+              <a class='proj-link' href='https://cpaschall.github.io/workday-scheduler/' alt='scheduler gif'><span id='rotate-3'>scheduler</span></a>
+            </div>
+            <div class='pw-gen mobile'>
+              <a class='proj-link' href='https://cpaschall.github.io/password-generator/' alt='pw gen png'><span id='rotate-0'>password generator</span></a>
+            </div>
+          </div>
+          <!-- <button type="submit" class="cycle-btn" id="next">&#187</button> -->
         </div>
         <div class="" id="contact-me">
           <div id="title-container-contact">
